# article-summarizer

./: .enc.env  .gitignore  .goreleaser.yaml  .pre-commit-config.yaml  Makefile  README.md  go.mod  go.sum  main.go  notebook.ipynb  pyproject.toml  requirements.txt  test.ipynb
article_summarizer/: frontend.py  main.py  summarizer.py
article_summarizer/model/: request.py  response.py
cmd/: api.go  article.go  config.go  root.go  utils.go  wallabag.go
core/: article.go  config.go  utils.go  wallabag.go
python/: pyproject.toml  requirements.txt
python/article_summarizer/: frontend.py
tests/: run_mypy.sh
