[tool.poetry]
name = "article-summarizer"
version = "0.1.0"
description = ""
authors = ["kahnwong <karn@karnwong.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
#transformers = "^4.35.2"
#torch = "^2.1.1"
#fastapi = "^0.104.1"
#uvicorn = "^0.24.0.post1"
#pydantic = "^2.5.2"
#python-dotenv = "^1.0.0"
#readability-lxml = "^0.8.1"
keras = "^3.1.1"
keras-nlp = "^0.9.1"
jax = "^0.4.26"
jaxlib = "^0.4.26"
tensorflow = "2.16.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"



[tool.poetry.group.tests.dependencies]
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
