[tool.poetry]
name = "article-summarizer"
version = "0.1.0"
description = ""
authors = ["kahnwong <karn@karnwong.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
beautifulsoup4 = "^4.12.3"
lxml-html-clean = "^0.1.1"
readability-lxml = "^0.8.1"
requests = "^2.32.0"
streamlit = "^1.33.0"
ollama = "^0.1.9"
langdetect = "^1.0.9"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[tool.poetry.group.tests.dependencies]
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
